Created Square and Got Color from API

--- a/OlMaPixelBoard/Pages/Index.cshtml
+++ b/OlMaPixelBoard/Pages/Index.cshtml
@@ -11,3 +11,6 @@
 
 
 <p>Resultat is halt: @Model.testPixel</p>
+
+
+<div class="square" style="background-color: rgb(@Model.red,@Model.green,@Model.bleu)"></div>
