--- a/OlMaPixelBoard/wwwroot/css/site.css
+++ b/OlMaPixelBoard/wwwroot/css/site.css
@@ -26,3 +26,8 @@ body {
     height: 50px;
     background-color: rgb(0,0,0);
 }
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(16, 50px);
+}
